apply plugin: 'java'
apply plugin: "jacoco"

sourceCompatibility = 1.8
version = '1.0'

allprojects {
    apply plugin: 'idea'
    apply plugin: 'java'
    group = 'fk.retail.inventory.planner'
}

subprojects {
    apply plugin: 'java'
    version = '1.0'

    dependencies {
        repositories {
            maven { url 'http://artifactory.nm.flipkart.com:8081/artifactory/libs-releases' }
            maven { url 'http://artifactory.nm.flipkart.com:8081/artifactory/libs-snapshots' }
            maven { url "http://oss.sonatype.org/content/repositories/snapshots" }
            mavenCentral()
            mavenLocal()
        }

        compile('fk.sp.common:common-extensions:' + commonExtentions)
        compile('fk.sp.common:spring-jpa:' + commonExtentions)
        compile('flipkart.retail.libraries:dropwizard-admin:5.0.3')

        compile group: 'org.apache.poi', name: 'poi', version: '3.16'
        compile group: 'org.apache.poi', name: 'poi-ooxml', version: '3.16'
        compile ('fk.sp.common:restbus-sender:' + commonExtentions){
            exclude group: 'com.netflix.hystrix'
        }

        testCompile "junit:junit:4.11"
        testCompile "org.jukito:jukito:1.3"
        testCompile "io.dropwizard:dropwizard-testing:$dropwizardVersion"
        testCompile "fk.sp.common:common-test-extensions:$commonExtentions"
        testCompile group: 'org.mockito', name: 'mockito-core', version: '2.2.7'
        testCompile 'org.skyscreamer:jsonassert:1.3.0'
        testCompile group: 'org.hsqldb', name: 'hsqldb', version: '2.3.2'
    }

    configurations {
        all*.exclude group: 'com.sun.jersey' //dropwizard 9 using jersey 2 which has conflicting packages
        all*.exclude group: 'com.yammer.dropwizard' //dropwizard < 7 packages
        all*.exclude group: 'log4j', module: 'log4j'
        all*.exclude group: 'org.slf4j', module: 'slf4j-log4j12'
        all*.exclude group: 'org.slf4j', module: 'slf4j-simple'
        all*.exclude group: 'org.testng', module: 'testng'
        all*.exclude group: 'org.jadira.usertype', module: 'usertype.jodatime'
    }

    // this is required for entity scanning to work correctly while
    // running tests from gradle -
    // http://forums.gradle.org/gradle/topics/regression_with_classloading_in_the_jetty_plugin_with_gradle_1_0_milestone_6
    sourceSets.main.output.resourcesDir = sourceSets.main.output.classesDir
}


buildscript {
    apply from: file('gradle/buildscript.gradle'), to: buildscript
}

task createWrapper(type: Wrapper) {
    gradleVersion = '2.0'
}

apply plugin: 'dropwizard-debian'

dropwizardDebian {
    adminPort = Integer.valueOf(_adminPort)
    jmxPort = Integer.valueOf(_jmxPort)
    applicationName = "fk-ip-inventory-planner"
    parentProject = "manager"
    javaOpts = "-Xms1024m -Xmx4096m -XX:MaxPermSize=256m -XX:+UseG1GC -verbose:gc -XX:+PrintGCDateStamps -XX:+PrintGCTimeStamps -XX:+PrintGCDetails -Xloggc:/var/log/flipkart/rp/fk-ip-inventory-planner/gc.log"
    zip64 = true
    jreVersion = 8;
    enableLogAggregation = true
    enableConfigService = true
    enableEmpujadorConfig = true
}

ext.mainClassName = 'fk.retail.ip.manager.ManagerApplication'
ext.configFile = '../config/development/config.yaml'
ext.appName = dropwizardDebian.applicationName

apply from: file('gradle/common.gradle')



